--- a/homework1/homework1/homework1.vcxproj
+++ b/homework1/homework1/homework1.vcxproj
@@ -148,6 +148,12 @@
   <ItemGroup>
     <ClCompile Include="homework1.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Circle.h" />
+    <ClInclude Include="homework1.h" />
+    <ClInclude Include="Rect.h" />
+    <ClInclude Include="Shape.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
