ExampleBitmap module : print bitmap image

--- a/10-19/EX2/EX2/EX2.vcxproj
+++ b/10-19/EX2/EX2/EX2.vcxproj
@@ -201,6 +201,7 @@
     <ResourceCompile Include="EX2.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="res\bitmap1.bmp" />
     <Image Include="res\EX2.ico" />
     <Image Include="res\Toolbar.bmp" />
     <Image Include="res\Toolbar256.bmp" />
