--- a/10-19/EX2/EX2/EX2.vcxproj.filters
+++ b/10-19/EX2/EX2/EX2.vcxproj.filters
@@ -66,6 +66,9 @@
     <Image Include="res\Toolbar256.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="res\bitmap1.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\EX2.rc2">
