OnMouseMove module : draw line using class

--- a/10-19/EX2/EX2/EX2.vcxproj
+++ b/10-19/EX2/EX2/EX2.vcxproj
@@ -181,15 +181,19 @@
   <ItemGroup>
     <ClInclude Include="ChildView.h" />
     <ClInclude Include="EX2.h" />
+    <ClInclude Include="Line2D.h" />
     <ClInclude Include="MainFrm.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Shape2D.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ChildView.cpp" />
     <ClCompile Include="EX2.cpp" />
+    <ClCompile Include="Line2D.cpp" />
     <ClCompile Include="MainFrm.cpp" />
+    <ClCompile Include="Shape2D.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
